--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@vueuse/core": "^9.10.0",
+    "downloadjs": "^1.4.7",
     "sass": "^1.57.1",
     "v-contextmenu": "^3.0.0",
     "v-drag": "^3.0.8",
