--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "@vueuse/core": "^9.10.0",
-    "axios": "^1.5.1",
+    "@wagmi/core": "^1.4.6",
+    "@web3modal/wagmi": "^3.2.1",
+    "axios": "^1.6.1",
     "downloadjs": "^1.4.7",
     "sass": "^1.57.1",
     "v-contextmenu": "^3.0.0",
     "v-drag": "^3.0.8",
+    "viem": "^1.18.9",
     "vue": "^3.2.45",
     "vuedraggable": "^4.1.0"
   },
@@ -33,7 +36,7 @@
     "naive-ui": "^2.34.4",
     "postcss": "^8.4.20",
     "tailwindcss": "^3.2.4",
-    "typescript": "^4.9.3",
+    "typescript": "^5.0.0",
     "vite": "^4.0.0",
     "vue-tsc": "^1.0.11"
   }
